// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should view 1 expenses totalling correctly 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`should view 2 expenses totalling correctly 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $2,359,878,687.68
  </h1>
</div>
`;
